--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "hello-fastapi"
+name = "fastapi"
 main = "src/worker.py"
 compatibility_flags = ["python_workers"]
 compatibility_date = "2023-12-18"
